[package]
name = "repgenerate"
version = "0.1.0"
edition = "2024"
readme = "README.md"
license = "MIT"
authors = ["Gaurav Sablok <gsablok@ibch.poznan.pl>"]
description = "demultiplexer and read summarizer for illumina sequencing"
homepage = "https://github.com/IBCHgenomic/repgenerate"
repository = "https://github.com/IBCHgenomic/repgenerate"

[dependencies]
async-std = "1.13.1"
clap = { version = "4.5.40", features = ["derive"] }
figlet-rs = "0.1.5"
serde = "1.0.219"
serde_json = "1.0.140"
